--- a/src/ElasticSearch.Linq.csproj
+++ b/src/ElasticSearch.Linq.csproj
@@ -4,10 +4,10 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Description>es的netcore操作客户端</Description>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.1.3.1</AssemblyVersion>
-    <FileVersion>1.1.3.1</FileVersion>
-    <Version>1.1.3.1</Version>
-    <PackageReleaseNotes>修复bug: LowLevelClient多字段查询时的bug</PackageReleaseNotes>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <FileVersion>1.0.0.0</FileVersion>
+    <Version>1.0.0.0</Version>
+    <PackageReleaseNotes></PackageReleaseNotes>
   </PropertyGroup>
 
   <ItemGroup>
@@ -15,6 +15,10 @@
     <PackageReference Include="Microsoft.Extensions.Options" Version="3.1.16" />
     <PackageReference Include="NEST" Version="7.10.0" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Properties\" />
   </ItemGroup>
 
 </Project>
